fix(bautajs-fastify-example): remove qs as dependency and examples using csv
